--- a/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
@@ -1,13 +1,21 @@
 ---
 title: Tune your cache settings
-description: insert later
-meta_tags: build
+description: Boost your edge application's efficiency with strategic cache handling with custom cache TTL values, object segmentation methods, and file slicing.
+meta_tags: build, cache, ttl, browser, edge, object
 namespace: docs_guides_build_tune_cache_settings
 permalink: /documentation/products/guides/build/tune-cache-settings/
 menu_namespace: buildMenu
 ---
 
+import Button from '~/components/Button.astro'
+
 Adjust your edge application's cache strategy, including expiration values at the edge or browser level, file slicing to break large files into smaller chunks, and cache key segmentation based on query strings or cookies.
+
+<Button href="link_cache_sett" variant="secondary" text="Go to Cache Settings documentation"></Button>
+
+:::caution[warning]
+Some cache features require the [Application Acceleration](link_app_accel) module to be active. If **Application Acceleration** is activated, data transfer could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
+:::
 
 To modify your application's cache settings, you need:
 
@@ -19,11 +27,7 @@ You can configure your application's cache settings using [Real-Time Manager (RT
 
 ## Via RTM
 
-In this section, you'll add a new configuration for your application's cache. You can choose to modify your **Default Cache Setting**, which is already listed and activated by default in your application, or create a new one. 
-
-:::note
-This guide describes the process of creating and activating a new cache setting in your application for a specific scenario. However, if you want to modify cache settings for your entire application, you can choose to modify your default cache setting instead of creating a new one. In this case, you won't need to create or activate a new cache setting instance using **Rules Engine**, since the *default rule* already activates your setting.
-:::
+In this section, you'll add a new configuration for your application's cache. You can choose to modify your **Default Cache Setting**, which is already listed and activated by default in your application, or create a new one.
 
 To create a new cache setting instance:
 
@@ -36,6 +40,8 @@ To create a new cache setting instance:
 7. Give your cache setting a name.
 
 This guide will go over each option available to you, but you can choose which configuration will be altered in the cache setting depending on the needs of your application.
+
+### Expiration settings
 
 To start, you can customize how long objects should remain in cache. You can customize the cache Time To Live (TTL) in browsers and at the edge. This data is sent in requests and responses through the `Cache-Control` and `Expires` HTTP headers. 
 
@@ -64,8 +70,10 @@ If your application isn't sending `Cache-Control` and `Expires` headers or the v
 :::note
 The maximum and default TTL values for the edge should be between `60` and `31536000` seconds (3 years). If you have the [Application Acceleration](link_app_accel) module activated, you can set this value to a minimum of `0`. Additionally, if you have the [L2 Caching](link_l2) module activated and wish to maintain cache in the L2, you must set TTL to at least `3` seconds.
 
-A TTL zero is not the same as a cache bypass. For more details, read about the difference between these settings on the [Bypass cache](/en/documentation/products/edge-application/rules-engine/#difference-between-bypass-cache-and-ttl-0) documentation.
+A TTL zero isn't the same as a cache bypass. For more details, read about the difference between these settings on the [Bypass cache](/en/documentation/products/edge-application/rules-engine/#difference-between-bypass-cache-and-ttl-0) documentation.
 :::
+
+### Slice files
 
 Next, you can implement file slicing for large files. Instead of downloading a large content file and risking timeouts or connection terminations, the file is sliced in pieces and cache the content on-demand to implement file slicing for large files:
 
@@ -73,6 +81,8 @@ Next, you can implement file slicing for large files. Instead of downloading a l
 6. The **Edge caching** layer is already selected by default. If you have the **L2 Caching** module activated, you can also enable slicing for the L2.
 
 The slice range is of `1024KB` by default.
+
+### Advanced cache key
 
 The next step is to customize how your content will be cached at the edge through [cache keys](link_ref_cache). You can choose to segment cache keys based on query string or cookies.
 
@@ -82,7 +92,7 @@ To enable all advanced cache key functionalities, you must activate the [Applica
 
 To determine content variation in cache:
 
-7. In **Cache by Query String**, Select **Content varies by some Query String fields (Whitelist)**.
+7. In **Cache by Query String**, select **Content varies by some Query String fields (Whitelist)**.
 8. In **Query String fields**, add the value `city`.
 
 Now, when a request is made to an application URL `xxxxxxxxxx.map.azionedge.net/page?city=12345`, the cache key for this URL will be different from cache keys made to `xxxxxxxxxx.map.azionedge.net/page` and any other queries appended to the URL.
@@ -111,6 +121,8 @@ Now, when a request is made to an application and the response from the origin s
 Use the **Content varies by Cookies, with the exception of a few (Blacklist)** option to do the reverse: keep all requests with cookies as different cache key; the ones specified in the **Cookie name** will be grouped into a single cache key.
 :::
 
+### Adaptive delivery
+
 Finally, if you've created a [device group](link_dev_guide), you can segment cache keys based on the device groups you created. To do so:
 
 14. Select **Content varies by some Device Groups (Whitelist)**.
@@ -124,7 +136,7 @@ Once you've finished configuring your cache setting:
 
 The cache settings page now lists the newly created instance. However, this new cache setting isn't active in your application. You need to define what will trigger the cache policies to be implemented in your application. For this, you can use your edge application's **Rules Engine**.
 
-The instructions below will help you create a rule in which any request from your users to the `xxxxxxxxxx.map.azionedge.net/cache` URI will apply the cache setting you created.
+The instructions below will help you create a rule in which any request from your users to `xxxxxxxxxx.map.azionedge.net/cache` will apply the cache setting you created.
 
 1. Navigate to the **Rules Engine** tab.
 2. Click the **Add Rule** button and select **Request Phase**.
@@ -144,6 +156,8 @@ The `${uri}` variable may already be selected by default if you didn't activate 
 To verify how your content is being cached, follow the guide [How to verify application cache indicators using Modheader for Google Chrome](/en/documentation/products/guides/check-page-cache-time/).
 
 ## Via API
+
+This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
 Before you run the Azion API, you'll need to [generate a personal token](link_personal_token) for your account. You also need to [retrieve your edge application ID](link_configure_edge_app) to run the following requests.
 
@@ -172,29 +186,6 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 
 4. Copy the ID received in the response.
 
-:::note
-This guide describes the process of creating and activating a new cache setting in your application for a specific scenario. However, if you want to modify cache settings for your entire application, you can choose to modify your default cache setting using a `PUT` or `PATCH` request to the cache settings endpoint instead of creating a new one. In this case, you won't need to create or activate a new cache setting instance using **Rules Engine**, since the *default rule* already activates your setting.
-
-To get your default cache settings ID and modify cache policies for your entire application, run the following `GET` request:
-
-```bash
-curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edge_application_id>/cache_settings' \
---header 'Accept: application/json; version=3' \
---header 'Authorization: Token [TOKEN VALUE]' \
-```
-
-Then, run a `PATCH` request to modify the settings using the following endpoint:
-
-```bash
-curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id>/cache_settings/<cache_settings_id>' \
---header 'Accept: application/json; version=3' \
---header 'Content-Type: application/json' \
---header 'Authorization: Token [TOKEN VALUE]' \
---data '{
-    <Insert data as described below>
-}'
-```
-:::
 
 5. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, the `<edge_application_id>` variable with the `id` of your edge application, and the `<device_group_id>` with the ID of the device group, if desired:
 
@@ -319,6 +310,15 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 }'
 ```
 
-8. Wait a few minutes for the changes to propagate.
+:::note
+For more information on the rules endpoint, see [Work with Rules Engine](link_work_rules).
+:::
+
+8. You'll receive a response with the updated data.
+9. Wait a few minutes for the changes to propagate.
 
 To verify how your content is being cached, follow the guide [How to verify application cache indicators using Modheader for Google Chrome](/en/documentation/products/guides/check-page-cache-time/).
+
+:::tip
+Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+:::
