--- a/src/content/docs/en/pages/1.build/edit-device-groups/device-groups.mdx
+++ b/src/content/docs/en/pages/1.build/edit-device-groups/device-groups.mdx
@@ -1,21 +1,15 @@
 ---
 title: Create device groups
-description: insert later
-meta_tags: build
+description: Group end-users using Device Groups based on their device, operating system, or browser details accessed via the User-Agent HTTP request header.
+meta_tags: build, device, user agent, browser, detect
 namespace: docs_guides_build_create_device_groups
 permalink: /documentation/products/guides/build/create-device-groups/
 menu_namespace: buildMenu
 ---
 
+import Button from '~/components/Button.astro'
+
 You can use **Device Groups** to group end-users based on their devices, operating systems, or browsers with information provided by the `User-Agent` HTTP request header. By using device groups to categorize requests, you can make your application more responsive.
-
-## Create and match a device group
-
-To create a device group for your edge application, you'll need:
-
-- An [Azion account](link_accounts)
-- An [edge application](link_build_with_edge_app).
-- An [Azion domain](link_config_domain).
 
 The example described in this guide will group browsers through the contents of its `User-Agent` request header. For example:
 
@@ -25,33 +19,41 @@ User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 16_4 like Mac OS X) AppleWebKit/6
 
 A request that carries this header was made from a mobile device, more specifically iPhone, using a Safari browser. By creating a device group that matches the words `Mobile` and `iPhone` from the header, you can configure your application to respond differently to any request that falls within this category.
 
+<Button href="link_dev_group" text="Go to Device Groups documentation" variant="secondary"></Button>
+
+To create a device group for your edge application, you'll need:
+
+- An [Azion account](link_accounts)
+- An [edge application](link_build_with_edge_app).
+- An [Azion domain](link_config_domain).
+
 You can create device groups using [Real-Time Manager](#via-rtm) or the [Azion API](#via-api).
 
-### Via RTM
+## Via RTM
 
 The purpose of this guide is that you create and match a new device group for mobile devices that access your application. To add a new device group through RTM:
 
 1. [Access RTM](link_rtm).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Edge Application**.
-3. Click the edge application you want to create a new device group.
+3. Click the edge application to which you want to create a new device group.
 4. Select the **Device Groups** tab.
 5. Click the **Add Device Group** button.
-6. Name your device group. The name of your device group must not contain spaces and must have only alphanumeric characters. For example, `Mobile`.
+6. Name your device group. The name of your device group can't contain spaces and must have only alphanumeric characters. For example: `Mobile`.
 7. In the **User Agent** field, specify a regular expression that will meet the desired criteria. For example: `(Mobile|iPhone|Android)`.
 8. Click the **Save** button.
 
-:::important
+:::caution[warning]
 The procedure described below is a temporary solution to check the validity of your device group. Once tests have been successfully made, you should deactivate the rule.
 :::
 
 Now that your device group is set, you can use **Rules Engine** to determine what action must be taken if the expression is matched to a `User-Agent` header. In this case, a custom `Device-Is` header will be received in the response:
 
 1. Navigate to the **Rules Engine** tab.
-2. Click **Add Rule**, then select **Response Phase**.
+2. Click **Add Rule** > select **Response Phase**.
 3. Give your rule a name. For example: `Device Group: Mobile`.
-4. In the **Criteria** section, select the variable `${device_group}`
+4. In the **Criteria** section, select the variable `${device_group}`.
 5. Select the operator **is equal**.
-6. Add the name of the device group as configured in the previous instructions. For example, `Mobile`.
+6. Add the name of the device group as configured in the previous instructions. For example: `Mobile`.
 7. In the **Behavior** section, select the behavior **Add Response Header**.
 8. As an argument, add `Device-Is: Mobile device`.
 9. Click the **Save** button.
@@ -60,14 +62,14 @@ Now that your device group is set, you can use **Rules Engine** to determine wha
 If your current browser sends a `User-Agent` header similar to the example, you can test whether the request went through by accessing your application from a mobile device. If it doesn't, you can make a Client URL (cURL) request from your terminal and artificially add the header and its value using the following command:
 
 ```bash
-curl -I https://the9ht2nvz.map.azionedge.net/ -H "User-Agent: iPhone Android"
+curl -I https://xxxxxxxxxx.map.azionedge.net/ -H "User-Agent: iPhone Android"
 ```
 
 You should receive a list of headers including the custom header added by the rule: `device-is: Mobile device`.
 
 Now that you've verified that the devices are being correctly categorized, you can customize the desired behavior using the same rule.
 
-### Via API
+## Via API
 
 This section contains a sequence of cURL commands you can run in a command terminal or in an API platform of your choosing.
 
@@ -105,11 +107,11 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 }
 ```
 
-:::important
+:::caution[warning]
 The procedure described below is a temporary solution to check the validity of your device group. Once tests have been successfully made, you should deactivate or modify the rule.
 :::
 
-Now to create a response that will be triggered by the device group using **Rules Engine**:
+Now, to create a response that will be triggered by the device group using **Rules Engine**:
 
 1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, the `<edge_application_id>` variable with the `id` of your edge application, and the `input_value` variable with the name of your device group:
 
@@ -170,14 +172,14 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 }
 ```
 
-3. Wait a few minutes for the propagation time to the edges.
-4. Then, run the following cURL request manipulating the `User-Agent` header to match the device group:
+3. Wait a few minutes for the changes to propagate to the edge nodes.
+4. Run the following cURL request manipulating the `User-Agent` header to match the device group:
 
 ```bash
-curl -I https://the9ht2nvz.map.azionedge.net/ -H "User-Agent: Android"
+curl -I https://xxxxxxxxxx.map.azionedge.net/ -H "User-Agent: Android"
 ```
 
-5. If you receive a response similar to the following, your device group is being successfully categorized:
+5. If you receive a response similar to the following, your device group has been successfully categorized:
 
 ```bash
 HTTP/2 200 
@@ -187,3 +189,7 @@ device-is: Mobile device
 ```
 
 You may now deactivate the rule or create a different rule to fit the application's settings to your needs.
+
+:::tip
+Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+:::
