--- a/src/content/docs/en/pages/1.build/edit-origins/origins.mdx
+++ b/src/content/docs/en/pages/1.build/edit-origins/origins.mdx
@@ -1,21 +1,18 @@
 ---
 title: Work with origins
-description: insert later
-meta_tags: build
+description: Create an edge application with Azion by setting up an origin. Your origin can be an application, a web server, or storage.
+meta_tags: origin, server, application, storage, bucket
 namespace: docs_guides_build_work_with_origins
 permalink: /documentation/products/guides/build/work-with-origins/
 menu_namespace: buildMenu
 ---
 
+import Button from '~/components/Button.astro'
+
+
 When you create an edge application with Azion, you have to set an origin, which can be an application, a web server, or a storage. When you [created an edge application](link_build_with_edge_app) or [used a template](link_templates), you already created a default origin.
 
-In this guide, you'll create and activate a new origin, with a brand new `Host` header, path, protocol policy, and origin address.
-
-## Create a new origin
-
-:::note
-This guide describes the process of creating and activating a new origin in your application for a specific scenario. However, if you want your origin settings to apply to your application as a whole, you can choose to modify your default origin instead of creating a new one. In this case, you won't need to create or activate a new origin instance, since the default origin will be already activated by the *default rule* in **Rules Engine**.
-:::
+<Button href="link_edge_app" text="Go to Origins documentation" variant="secondary"></Button>
 
 To create a new origin for your edge application, you'll need:
 
@@ -27,7 +24,7 @@ You can choose to create and modify your origins using [Real-Time Manager (RTM)]
 
 ### Via RTM
 
-In this section, you'll add a new origin to your application. The default origin will maintain its original behavior, but the
+In this section, you'll add a new origin to your application without overriding the origin you created when you first built your application.
 
 To configure your origins through RTM:
 
@@ -61,6 +58,9 @@ The path included in this field will be appended to the origin address, which sh
 This will enforce an HTTPS connection with the origin, not affecting the protocol from user requests.
 
 7. Under **Address**, add `httpbin.org`.
+
+In this field, you can add a host or an IPv4 address.
+
 8. Click the **Save** button.
 
 :::note
@@ -87,6 +87,8 @@ The `${uri}` variable may already be selected by default if you didn't activate 
 9. Wait a few minutes for the changes to propagate and access `xxxxxxxxxx.map.azionedge.net/httpbin`. 
 
 ### Via API
+
+This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
 
 Before you run the Azion API, you'll need to [generate a personal token](link_personal_token) for your account. You also need to [retrieve your edge application ID](link_configure_edge_app) to run the following requests.
 
@@ -187,3 +189,7 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 ```
 
 4. Wait a few minutes for the changes to propagate and access `xxxxxxxxxx.map.azionedge.net/httpbin`. Also, try accessing any other unconfigured URI: you should receive a `404` error.
+
+:::tip
+Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+:::
