--- a/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
@@ -29,7 +29,7 @@ In this section, you'll modify some configurations of your application. You can 
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and select **Edge Application**.
 3. Click the edge application you want to configure. From this screen, you can alter the application's name, delivery settings, and which modules it uses.
 
-The following steps will guide you through editing an edge application's settings. These instructions pick up where you left off from [creating an edge application](link_build_with_edge_app), but you can modify these settings, any time you want, to fit your needs.
+The following steps will guide you through editing an edge application's settings. These instructions pick up where you left off from [creating an edge application](/en/documentation/products/guides/build/build-with-edge-application/), but you can modify these settings, any time you want, to fit your needs.
 
 ### Delivery protocols
 
@@ -81,15 +81,15 @@ Customize your TLS cipher suite and edit the minimum TLS version by doing the fo
 3. Under **Supported Ciphers list**, select **TLSv1.2_2021**.
 4. Click the **Save** button.
 
-Once again, it may take some time to propagate your changes to the edge. To verify whether your changes took place, you can inspect the page using your browser and locate the security settings of the application. You can also [run the DIG command](link_dig_command) to get more information on your security settings.
+Once again, it may take some time to propagate your changes to the edge. To verify whether your changes took place, you can inspect the page using your browser and locate the security settings of the application. You can also [run the DIG command](/en/documentation/products/guides/run-the-dig-command/) to get more information on your security settings.
 
 The application may still be running in TLS 1.3, since you selected the minimum version and not the exact TLS version. However, you can check the cipher suite being used against the [list of supported ciphers](/en/documentation/products/edge-application/#ciphers).
 
 ### Modules
 
-Modules can unlock additional functionalities and features for your applications. See the [Pricing page](link_pricing) for more information on how they are priced. 
+Modules can unlock additional functionalities and features for your applications. See the [Pricing page](https://www.azion.com/en/pricing/) for more information on how they are priced. 
 
-For now, you'll enable two modules. The modules **Application Acceleration** and **Edge Functions** will be used for when you [tune your cache settings](link_cache_settings), [instantiate an edge function](link_functions), and [work with Rules Engine](link_rules). If you're an [Account owner](link_account_types), start by enabling them for your account:
+For now, you'll enable two modules. The modules **Application Acceleration** and **Edge Functions** will be used for when you [tune your cache settings](/en/documentation/products/guides/build/tune-cache-settings/), [instantiate an edge function](/en/documentation/products/guides/build/instantiate-edge-functions/), and [work with Rules Engine](/en/documentation/products/guides/build/work-with-rules-engine/). If you're an [Account owner](/en/documentation/products/guides/users-management/), start by enabling them for your account:
 
 1. [Access RTM](https://manager.azion.com).
 2. On the top-right corner, click the **Account menu**.
@@ -202,7 +202,7 @@ To check all available values for this endpoint, see the [Azion API](https://api
 curl -I https://xxxxxxxxxx.map.azionedge.net:8443
 ```
 
-7. Check the supported cipher suite by inspecting the page or [running the DIG command](link_dig_command).
+7. Check the supported cipher suite by inspecting the page or [running the DIG command](/en/documentation/products/guides/run-the-dig-command/).
 
 :::tip
 Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about what the Azion API can offer.
