--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
@@ -120,3 +120,14 @@ allowfullscreen></iframe>
 
 Overall, cloud computing and edge computing paradigms often serve as integral components of modern computing ecosystems and complement each other, allowing organizations to create hybrid architectures, delivering a more versatile and efficient computing environment for various applications and industries. Check the Learning material about [the edge and hybrid-cloud workloads case]() to know more about these possibilities.
 
+## Benefits of edge computing
+
+- **Decentralized infrastructure and management**: edge computing involves managing a highly-distributed network composed of multiple edge nodes located closer to the user, without the need for intensive management and orchestration like in cloud and legacy architectures.
+- **Proximity to data sources**: resources are placed as close as possible to the data sources or endpoints where data is generated or consumed. 
+- **Low latency**: this proximity reduces the latency associated with transmitting data to and from a remote data center or cloud, being a good fit for applications that require real-time or near-real-time processing.
+- **Bandwidth optimization**: less data need to be transmitted over the network to centralized data centers or the cloud, optimizing the network bandwidth usage and reducing costs associated with data transfer.
+- **Scalability**: deploying additional edge devices or servers as needed is easier, achieving high scalability and flexibility for organizations that need to constantly adapt to changing workloads and requirements.
+- **Resilience**: due to a distributed infrastructure and its fault-tolerant nature, edge computing platforms can continue to operate in case a node is under maintenance, enhancing the overall resilience and availability of applications and services.
+- **Diverse ecosystem**: edge computing reinforces open standards and supports a diverse range of devices and systems, including edge servers, IoT devices, machines, sensors, gateways, hybrid and cloud integration, and more.
+- **Data privacy and security**: due to sensitive or critical data being processed and stored locally rather than being sent to a remote data center, data privacy and security are enhanced.
+- **New use cases**: edge computing enables innovative use cases that may not have been feasible due to latency and bandwidth constraints. For example: online fraud protection, Jamstack applications, workflow automation, IoT orchestration, infrastructure automation, and workload migration.
