--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/what-edge-is.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/what-edge-is.mdx
@@ -12,14 +12,16 @@ Edge computing enables the building and management of [modern applications](/en/
 
 With this approach, companies don't have to rely anymore just on a centralized cloud-based infrastructure and, consequently, it allows them to serve new use cases.
 
+---
+
 ## Components of edge
 
-Edge computing architecture is built upon four essential components. These elements collectively form the backbone of this new paradigm, enabling its capacity to deliver low-latency, high-performance solutions and reshaping modern computing.
+Edge computing infrastructure is built upon four essential components. These elements collectively form the backbone of this new paradigm, enabling its capacity to deliver low-latency, high-performance applications and reshape the digital landscape.
 
-- 
--
--
--
+- **Routing**: edge computing includes state-of-the-art software-defined technology to route the request received in the network. This approach turns it into an environment programmable and extensible, able to detect users and devices routing them to the healthier and more optimal node.
+- **Orchestrating**: the automation and coordination of various computing, networking, and storage resources to enable the deployment and management of workloads are essential characteristics of orchestration in the edge computing context. It involves defining and managing actions across edge nodes, ensuring the right allocation of resources at the right time, and maintaining overall integrity and efficiency.
+- **Computing**: it plays a crucial role in tasks like data processing, analysis, and running software programs. In this matter, edge computing is designed to operate efficiently in edge environments, delivering faster speeds and improved efficiency compared to [legacy architectures](/en/documentation/products/edge-foundations/how-edge-computing-works/#edge-vs-legacy-architectures).
+- **Observing**: edge computing provides a high capacity for monitoring and collecting data from various elements and systems to gain insights into their behavior, performance, and overall health through a data streamer. This data is essential for troubleshooting, performance optimization, decision-making, and real-time visibility into the state of infrastructure and applications, and, this way, maintains the reliability and security of the network.
 
 Overall, this enables a better user experience by addressing some of the key limitations of centralized solutions.
 
