--- a/src/content/docs/en/pages/guides/getting-to-know-rtm/getting-to-know-rtm.mdx
+++ b/src/content/docs/en/pages/guides/getting-to-know-rtm/getting-to-know-rtm.mdx
@@ -25,7 +25,7 @@ This section presents and describes the main components on the homepage and the 
 
 ![Real-Time Manager homepage]()
 
-1. **Products menu**: it's on the upper-right corner. By clicking on it, you can find all the available Azion products and their capabilities.
+1. **Products menu**: it's on the upper-left corner. By clicking on it, you can find all the available Azion products and their capabilities.
 
 2. **System Status** banner: it indicates how Azion's systems are operating. You can click the bar and check the status for each of the available [Edge Network's](https://www.azion.com/en/products/edge-network) locations.
 
